# libviso2-gui

./: .gitattributes  .gitignore  CMakeLists.txt  COPYRIGHT  README.md  run_debug.bat  run_release.bat
libs/include/libviso2/: CMakeLists.txt  filter.cpp  filter.h  matcher.cpp  matcher.h  matrix.cpp  matrix.h  reconstruction.cpp  reconstruction.h  timer.h  triangle.h  viso.cpp  viso.h  viso_mono.cpp  viso_mono.h  viso_stereo.cpp  viso_stereo.h
libs/include/png/: INSTALL  configure  pngrtran.c  pngrutil.c  pngwrite.c
libs/include/png++/: config.hpp  error.hpp  pixel_traits.hpp
libs/include/png/contrib/gregbook/: rpng2-win.c
libs/include/png/projects/vstudio/Debug/: libpng14.lib  pngtest.bsc
libs/include/png/projects/vstudio/libpng/: libpng.vcxproj
libs/include/png/projects/vstudio/libpng/Debug/: png.sbr  pngwin.res
libs/include/png/projects/vstudio/libpng/Debug/libpng.tlog/: BscMake.command.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  libpng.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
libs/include/png/projects/vstudio/pngtest/: pngtest.vcxproj
libs/include/png/projects/vstudio/pngtest/Debug/pngtest.tlog/: BscMake.command.1.tlog  CL.read.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pngtest.write.1u.tlog
libs/include/png/projects/vstudio/zlib/: zlib.vcxproj
libs/include/png/projects/vstudio/zlib/Debug/zlib.tlog/: CL.read.1.tlog  CL.write.1.tlog  link.write.1.tlog  zlib.lastbuildstate  zlib.write.1u.tlog
libs/include/zlib/: crc32.h
libs/lib/Win32/: libpng14.lib  libviso2.lib  zlib.lib
src/core/: application.cpp  application.h  entrypoint.cpp
src/core/handlers/: core_handler.cpp  core_handler.h  gui_handler.cpp  gui_handler.h
src/core/models/: models.h  settings.h  state.h
src/core/utils/: core_utils.cpp  core_utils.h  gui_utils.cpp  gui_utils.h
src/gui/: base_window.cpp  base_window.h  info_window.cpp  info_window.h  video_window.cpp  video_window.h
src/gui/models/: gui_models.h
src/viso/: viso_core.cpp  viso_core.h
